# shared-state-async

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
.github/workflows/: ci.yml
app/: main.cc  shared-state-async-client.cc  shared-state-async-server.cc  shared-state-async.cc  shared_state_cli.cc  shared_state_cli.hh
cmake/: Misc.cmake
doc/: doNotseOptional.cc  openwrt.txt  openwrtMakefile
include/: SharedStateErrorCode.hh  accept_operation.hh  async_command.hh  async_file_desc.hh  async_file_descriptor.hh  async_socket.hh  async_timer.hh  awaitable_syscall.hh  awaitable_traits.hpp  block_syscall.hh  close_operation.hh  config.h.in  connect_operation.hh  dying_process_wait_operation.hh  epoll_events_to_string.hh  example.h  execute.hh  file.hh  file_read_operation.hh  file_write_operation.hh  get_awaiter.hpp  io_context.hh  pipe_file_read_operation.hh  piped_async_command.hh  popen_async_command.hh  popen_file_read_operation.hh  read_operation.hh  recv_operation.hh  send_operation.hh  shared_state_error_code.hh  shared_state_errors.hh  sharedstate.hh  socket.hh  socket_accept_operation.hh  socket_recv_operation.hh  socket_send_operation.hh  task.hh  task.hpp  waitpid_operation.hh  write_operation.hh
include/debug/: rsdebug.h  rsdebuglevel0.h  rsdebuglevel1.h  rsdebuglevel2.h  rsdebuglevel3.h  rsdebuglevel4.h
src/: SharedStateErrorCode.cc  accept_operation.cc  async_command.cc  async_file_descriptor.cc  async_socket.cc  async_timer.cc  close_operation.cc  connect_operation.cc  dying_process_wait_operation.cc  epoll_events_to_string.cc  file_read_operation.cc  file_write_operation.cc  io_context.cc  pipe_file_read_operation.cc  piped_async_command.cc  popen_async_command.cc  popen_file_read_operation.cc  read_operation.cc  recv_operation.cc  send_operation.cc  shared_state_error_code.cc  shared_state_errors.cc  sharedstate.cc  socket.cc  socket_accept_operation.cc  socket_recv_operation.cc  socket_send_operation.cc  waitpid_operation.cc  write_operation.cc
src/debug/: rsdebug.cc
tests/: CMakeLists.txt  debugmesasgetest.cc  heaptrack.main.160814.zst  mergeechotest.cc  parsearcomandtest.cc  samplestate.txt
tests/luasamplescript/: scandir.lua
tests/python-testclient/: pythonTcpClient.py  runclient.sh  runclientcat.sh  runclientcopy.sh  runclientlocal.sh  runclientremote.sh
